fixed functionality issues, and spacing issues

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
   --color-primary: #749fd0;
   --color-secondary: #51d3cf;
 
-  --color-bg: #a4aac2;
+  --color-bg: #dadff2;
 
   --container-width-lg: 80%;
   --container-width-md: 90%;
